[Improve] k8s mode rebuild optimization, jump to flink dashboard ui bug fixed

--- a/streamx-console/streamx-console-webapp/src/views/flink/app/View.less
+++ b/streamx-console/streamx-console-webapp/src/views/flink/app/View.less
@@ -168,6 +168,10 @@
 
 }
 
+.def-margin-bottom {
+  margin-bottom: 10px
+}
+
 
 .running-tag {
   animation: running-tag-color 800ms ease-out infinite alternate;
